--- a/www.sota.my/css/menu.css
+++ b/www.sota.my/css/menu.css
@@ -1,3 +1,4 @@
+/*Бурогер меню*/
 .main_menu{
     min-height:50px;
 }
@@ -48,8 +49,6 @@
 
 
 /**********/
-
-
 .top_menu_m{
     list-style: none;
     display:block;
@@ -113,6 +112,11 @@
     display: inline-block;
     position: relative;
 }
+@media screen  and (max-width:895px){
+    .top_menu_pc > li:first-child {
+        display: none;
+    }
+}
 
 .top_menu_pc > li > a {
     font-family:Verdana, sans-serif;
@@ -157,3 +161,70 @@
     line-height: 36px;
     padding: 0 25px;
 }
+
+/***********Бурогер меню конец***************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/********************************************/
+/**************Левое меню********************/
+
+.l_menu{
+    /*border:#003559 1px solid ;*/
+    padding-bottom:7px;
+    margin-bottom:7px;
+}
+.l_menu li{
+    list-style:none;
+    position:relative;
+}
+
+.l_menu_title{
+    color:#CD7700;
+    font-size:120%;
+/*    color:#B2251F;*/
+    text-align:center;
+    line-height:40px;/*центрировать вертикально одну строчку */
+
+}
+.l_menu ul{
+    display:block;
+}
+.l_menu ul li{
+    border-bottom:#003559 thin solid;
+}
+.l_menu ul li a{
+    display:block;
+    text-decoration:none;
+    line-height:30px;
+    padding:0 2px 0 7px;
+}
+@media screen and (min-width:240px) and (max-width:480px){
+    .l_menu ul li a{line-height:45px;font-size:120%}
+}
+.l_menu ul li ul li a{
+    padding:0 2px 0 13px;
+}
+.l_menu ul li ul li ul li a{
+    padding:0 2px 0 20px;
+}
+.l_menu ul li a:hover{
+    background:linear-gradient(to top, #FF8E00, #ffe100);
+}
+/*******/
+.l_menu ul li ul,.l_menu ul li~ul{
+    display:none;font-size:91%;
+}
+.l_menu ul li:hover>ul{display:block;position:absolute;z-index:10; right:0}
+/********************************************/
+.l_menu ul li ul,.l_menu ul li~ul{
+    border:#1c7a05 1px solid;
+    background:#FF8E00;
+    border-radius:6px;
+    width:96%;
+}
+/********************************************/
