--- a/www.sota.my/css/menu.css
+++ b/www.sota.my/css/menu.css
@@ -173,17 +173,29 @@
 /********************************************/
 /**************Левое меню********************/
 
-.l_menu{
-    /*border:#003559 1px solid ;*/
+.l_menu,.r_menu{
+    position: relative;
+    background-color:#EFEFEF;
     padding-bottom:7px;
-    margin-bottom:7px;
+    margin:7px 0;
 }
-.l_menu li{
+@media screen and (min-width:300px) and (max-width:735px){
+
+    .l_menu{margin:7px 5%}
+}
+@media screen and (min-width:300px) and (max-width:735px){
+
+.r_menu{margin:7px 5%}
+}
+
+
+
+.l_menu li,.r_menu li{
     list-style:none;
     position:relative;
 }
 
-.l_menu_title{
+.l_menu_title,.r_menu_title{
     color:#CD7700;
     font-size:120%;
 /*    color:#B2251F;*/
@@ -191,40 +203,25 @@
     line-height:40px;/*центрировать вертикально одну строчку */
 
 }
-.l_menu ul{
+.l_menu ul,.r_menu ul{
     display:block;
 }
-.l_menu ul li{
+.l_menu ul li,.r_menu ul li{
     border-bottom:#003559 thin solid;
 }
-.l_menu ul li a{
+.l_menu ul li a,.r_menu ul li a{
     display:block;
     text-decoration:none;
     line-height:30px;
     padding:0 2px 0 7px;
+    transition: .3s linear;
 }
-@media screen and (min-width:240px) and (max-width:480px){
-    .l_menu ul li a{line-height:45px;font-size:120%}
+@media screen and (max-width:480px){
+    .l_menu ul li a,.r_menu ul li a{line-height:45px;font-size:120%}
 }
-.l_menu ul li ul li a{
-    padding:0 2px 0 13px;
+
+.l_menu ul li a:hover,.r_menu ul li a:hover{
+    background:linear-gradient(to top, #FF8E00, #FC761E);
+    color:#ffffff;
 }
-.l_menu ul li ul li ul li a{
-    padding:0 2px 0 20px;
-}
-.l_menu ul li a:hover{
-    background:linear-gradient(to top, #FF8E00, #ffe100);
-}
-/*******/
-.l_menu ul li ul,.l_menu ul li~ul{
-    display:none;font-size:91%;
-}
-.l_menu ul li:hover>ul{display:block;position:absolute;z-index:10; right:0}
-/********************************************/
-.l_menu ul li ul,.l_menu ul li~ul{
-    border:#1c7a05 1px solid;
-    background:#FF8E00;
-    border-radius:6px;
-    width:96%;
-}
-/********************************************/
+
