--- a/www.stroy.my/css/menu.css
+++ b/www.stroy.my/css/menu.css
@@ -248,26 +248,29 @@
 .r_menu{
     margin:3px 0;
     padding:3px 2px 1px;
-    /*background:#C5E1EC;*/
-    background-color:rgba(197, 225, 236,.5);
-    /*border: 1px solid #003559;*/
-    min-height: 100px;
+    background-color:rgba(197,225,236,.5);
+    min-height:100px
 }
 .r_menu_btn{
-    /*margin:5px 3px 15px;*/
+    margin:5px 3px 15px;
     min-height:35px;
-    border: 1px solid #003559;
-    box-shadow: 3px 3px 8px rgba(0,0,0,.3);
-    border-radius:2px;
+    border:1px solid #003559;
+    box-shadow:3px 3px 8px rgba(0,0,0,.3);
+    border-radius:3px;
 }
 .r_menu_btn:hover{
-    /*box-shadow: 3px 3px 8px rgba(255, 51, 52,.7);*/
-    box-shadow: 4px 3px 8px rgba(0,0,0,.7);
+    box-shadow:4px 3px 8px rgba(0,0,0,.7);
 }
 .r_menu_btn img{
-    border-radius:5px;
+    border-radius:4px 4px 0 0;
 }
-.r_menu_btn img{
-    width: 100%;
-    height: 100%;
+.r_menu .down_title{
+    text-align:center;
+    font-size:120%;
+    text-decoration:none;
+    line-height:25px;
+    padding-bottom:3px;
+}
+.r_menu a{
+    text-decoration:none;
 }
