--- a/www.stroy.my/css/menu.css
+++ b/www.stroy.my/css/menu.css
@@ -182,9 +182,14 @@
 /**************Левое меню********************/
 
 .l_menu{
-    /*border:#003559 1px solid ;*/
-    padding-bottom:7px;
-    margin-bottom:7px;
+    margin:3px 0 13px;
+    padding:3px 2px 1px;
+    background-color:rgba(197,225,236,.5);
+    min-height:100px
+}
+@media screen and (min-width:300px) and (max-width:735px){
+
+    .l_menu{margin:7px 5%}
 }
 .l_menu li{
     list-style:none;
@@ -192,9 +197,8 @@
 }
 
 .l_menu_title{
-    color:#CD7700;
+    color:#6B3708;
     font-size:120%;
-/*    color:#B2251F;*/
     text-align:center;
     line-height:40px;/*центрировать вертикально одну строчку */
 
@@ -203,6 +207,7 @@
     display:block;
 }
 .l_menu ul li{
+    margin: 1px 0;
     border-bottom:#003559 thin solid;
 }
 .l_menu ul li a{
@@ -210,31 +215,12 @@
     text-decoration:none;
     line-height:30px;
     padding:0 2px 0 7px;
+    transition: .3s linear;
 }
-@media screen and (min-width:240px) and (max-width:480px){
+@media screen and (max-width:480px){
     .l_menu ul li a{line-height:45px;font-size:120%}
 }
-.l_menu ul li ul li a{
-    padding:0 2px 0 13px;
-}
-.l_menu ul li ul li ul li a{
-    padding:0 2px 0 20px;
-}
-.l_menu ul li a:hover{
-    background:linear-gradient(to top, #FF8E00, #ffe100);
-}
-/*******/
-.l_menu ul li ul,.l_menu ul li~ul{
-    display:none;font-size:91%;
-}
-.l_menu ul li:hover>ul{display:block;position:absolute;z-index:10; right:0}
-/********************************************/
-.l_menu ul li ul,.l_menu ul li~ul{
-    border:#1c7a05 1px solid;
-    background:#FF8E00;
-    border-radius:6px;
-    width:96%;
-}
+
 /**************Левое меню конец**************/
 /********************************************/
 /********************************************/
