--- a/www.sota.my/css/menu.css
+++ b/www.sota.my/css/menu.css
@@ -196,7 +196,7 @@
 }
 
 .l_menu_title,.r_menu_title{
-    color:#CD7700;
+    color:#FC761E;
     font-size:120%;
 /*    color:#B2251F;*/
     text-align:center;
