--- a/www.sota.my/css/frame.css
+++ b/www.sota.my/css/frame.css
@@ -58,8 +58,8 @@ html,body{height:100%;
 }
 
 #logoname h1{
-	font-size: 320%;
-	color:#CD7700;
+	font-size:320%;
+	color:#FC761E;
 
 }
 @media screen and (max-width:740px){
@@ -115,7 +115,7 @@ html,body{height:100%;
 	width:240px;
 	overflow:hidden
 }
-@media screen and (max-width:/*495*/735px){
+@media screen and (max-width:735px){
 	.l_col{
 		float: none;
 		width:100%;
@@ -150,10 +150,10 @@ html,body{height:100%;
 
 
 /**************************/
-#af{min-height:21px}
+#af{min-height:13px}
 #foot{min-height:76px;padding:10px 2px}
 #copy{font-size:70%}
-#bf{height:18px}
+#bf{height:13px}
 
 
 @media screen and (min-width:1600px){
