--- a/www.stroy.my/css/common.css
+++ b/www.stroy.my/css/common.css
@@ -1,4 +1,4 @@
-h1,h2,h3,h4{margin:4px 7px 4px;text-align:center}
+h1,h2,h3,h4{margin:7px 4px;text-align:center}
 h1{font-size:35px}
 h2{font-size:30px}
 h3{font-size:25px}
