--- a/www.stroy.my/css/common.css
+++ b/www.stroy.my/css/common.css
@@ -10,6 +10,12 @@ ul{list-style:none}
 
 .fon,.fon_c{margin:0 0 7px}
 
+.check::before{
+    content:'✔ ';
+}
+.item:hover .check{
+    color: red;
+}
 /*.colorbox{cursor: url(../img/site/colorbox/zoomin.cur),pointer !important;}*/
 
 /*рекламные блоки*/
