--- a/css/stroy/common.css
+++ b/css/stroy/common.css
@@ -1,8 +1,8 @@
 h1,h2,h3,h4{margin:7px 4px;text-align:center}
-h1{font-size:35px}
-h2{font-size:30px}
-h3{font-size:25px}
-h4{font-size:20px}
+h1{font-size:33px}
+h2{font-size:28px}
+h3{font-size:23px}
+h4{font-size:19px}
 
 p,ol,ul,ul li{margin:5px}
 ul{list-style:none}
@@ -31,3 +31,5 @@ ul{list-style:none}
 #share .rel{margin:15px 3px}
 #informer{margin:6px 0;display:block}
 
+.nav_link a{margin:0 3px;display:inline-block}
+@media screen and (min-width:240px) and (max-width:780px){.nav_link a{margin:25px 24px}}
