-=Sota=- Start v 0.05 -=Stroy=- Start v 0.8 Img v 1.0 Admin v0.33 Sitemap v0.8 contacts v0.7

--- a/css/stroy/color.css
+++ b/css/stroy/color.css
@@ -9,6 +9,7 @@ A:hover,.link:hover{color:#B2251F;text-decoration:blink}
 
 .grey{color: #969696}
 
+.fon_c{border:#003559 thin solid}
 
 #foot{
 	background-color:#C5E1EC;
