--- a/css/stroy/common.css
+++ b/css/stroy/common.css
@@ -8,7 +8,7 @@ p,ol,ul,ul li{margin:5px}
 ul{list-style:none}
 
 
-.fon,.fon_c{margin:3px 7px}
+.fon,.fon_c{margin:3px 3px 7px}
 @media screen and (max-width:840px){.fon,.fon_c{margin:0 0 7px}}
 
 .check::before{
