Top menu 1.0 Банер 1.0 L menu 1.0 -=Class=- opt v.0.55 imgext v.1.0 obzor v0.1

--- a/css/vt/color.css
+++ b/css/vt/color.css
@@ -1,6 +1,6 @@
 body{background:#eae1b8 none;}
 
-.header{background:#703e1c url(../img/site/png.php?img=back_fon);}
+.header{background:#703e1c url(/img/site/pic.php?i=back_fon&ep=0);}
 
 #top_nav_r{color:#FFF}
 
