-=Sota=- Start v 0.05 -=Stroy=- Start v 0.85 Img v 1.0 Admin v0.4 Sitemap v0.85 contacts v0.7 -=Vt2=- Start v0.4 Авторизация v0.75 Vodoemi v0.2 Obzor v0.2

--- a/css/vt/color.css
+++ b/css/vt/color.css
@@ -12,7 +12,7 @@ body{background:#eae1b8 none;}
 
 .left_menu_child{border-bottom:#edcdb7 thin solid;}
 
-.fon,.section,.td_date,.td_linc,.ind_news{border-color:#edcdb7;}
+.fon,.fon_c,.section,.td_date,.td_linc,.ind_news{border-color:#edcdb7;}
 
 .fon_head{border-color:#edcdb7;background-color:#854a21;}
 .fon_head h4,.fon_head h4 a{color:#fff}
