--- a/www.win2.my/fountainG.css
+++ b/www.win2.my/fountainG.css
@@ -3,8 +3,8 @@
     position:relative;
     width:234px;
     height:28px;
-    /*margin:5px auto 13px;
-    background-color: #6B3708;*/
+    margin:5px auto 13px;
+   /* background-color: #6B3708;*/
 }
 
 .fountainG{
