--- a/www.smoke.my/css/dws_pic.css
+++ b/www.smoke.my/css/dws_pic.css
@@ -4,8 +4,8 @@
  /*width: 26%;*/
  margin: 20px auto;
  position: relative;
- border: solid 3px rgba(255, 255, 255, 0.8);
- background: linear-gradient(20deg, #f00, #00f);
+ border: solid 2px rgba(255, 255, 255, 0.8);
+ background: linear-gradient(20deg,#7a7a7a,#4D5055);
  overflow: hidden;/**/
 
 }
