--- a/www.smoke.my/css/default.css
+++ b/www.smoke.my/css/default.css
@@ -112,9 +112,13 @@ img{
     bottom:17px;
     right:17px;
     cursor:pointer;
-    display:none;
+    /*display:none;*/
     color:#333;
-    font-size:90%}
+    font-size:90%;
+    opacity:0;
+    transition:opacity .8s ease-in-out;
+
+}
 
 .link{
     cursor:pointer;
