--- a/www.smoke.my/css/menu_art.css
+++ b/www.smoke.my/css/menu_art.css
@@ -5,9 +5,9 @@
 }
 .menu-art{
    /* margin:0 auto;*/
-    background: rgb(201,201,201);
-    background: linear-gradient(to bottom,  rgba(201,201,201,1) 0%,rgba(246,246,246,1) 2%,rgba(196,197,199,1) 98%,rgba(117,117,119,1) 100%);
-
+       background: rgb(201,201,201);
+        background: linear-gradient(to bottom,  rgba(201,201,201,1) 0%,rgba(246,246,246,1) 2%,rgba(196,197,199,1) 98%,rgba(117,117,119,1) 100%);
+  /* overflow: hidden;*/
 }
 
 .menu-art ul,.menu-art ol{
@@ -17,7 +17,7 @@
 .menu-art > ul{
     display: flex;
     justify-content:space-between;
-    align-items: stretch;
+    align-items: stretch;/**/
 }
 
 .menu-art > ul li{
@@ -36,7 +36,7 @@
     background: rgb(201,201,201);
     background: linear-gradient(to bottom,  rgba(201,201,201,1) 0%,rgba(246,246,246,1) 2%,rgba(196,197,199,1) 98%,rgba(117,117,119,1) 100%);
 
-    padding: 15px 82px 15px 90px;/*настройки ширины меню*/
+    padding: 15px 82px 15px 85px;/*настройки ширины меню*/
     font-size: 14px;
     color: #454547;
     text-decoration: none;
