--- a/www.smoke.my/css/frame.css
+++ b/www.smoke.my/css/frame.css
@@ -124,6 +124,7 @@ z-index:1000;
 /**************************/
 /**************************/
 .l_col{
+	min-height:1px;
 	float:left;
 	width:240px;
 	overflow:hidden
