--- a/www.smoke.my/css/frame.css
+++ b/www.smoke.my/css/frame.css
@@ -120,7 +120,9 @@ z-index:1000;
 	float: right;
 	/*background-color: #72b572*/;
 }
-
+@media screen and (max-width:540px){
+	#fast_order,#full_order{width:100%;margin:0}
+}
 /**************************/
 /**************************/
 .l_col{
