--- a/css/smoke/color.css
+++ b/css/smoke/color.css
@@ -10,18 +10,12 @@ A:hover,.link:hover{color:#B2251F;text-decoration:blink}
 body{background-color:#EFEFEF}
 .header,#headcontact{background-color:#4D5055}
 
+.grey{color:#969696}
 
-.grey{color: #969696}
-
-.fon_c,.fon_c0{/*общий фон обводки*/
+.fon_c,.fon_c0{
 	background:#FEFEE4;
 	background:rgba(254,255,244,0.92)
 }
 .fon_c{border:#353535 dotted thin;}
-#foot{
-	background-color:#4D5055;
-}
-#up{
-	background:#4D5055;
-	color: #ffffdd;
-}
+#foot{background-color:#4D5055;}
+#up{background:#4D5055;color:#ffffdd;}
