--- a/css/default.css
+++ b/css/default.css
@@ -53,54 +53,6 @@ img{
 .note{font-size:70%}
 .hide{display:none}
 
-.modalload,.modalloadform{
-    position:fixed;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-}
-.modalload{
-    background:#000;
-    opacity:0.7;
-    z-index:999;
-}
-.modalloadform{
-    z-index:1000;
-}
-.modalloadformcanvas{
-    min-width:100px;
-    max-width:480px;
-    position:relative;
-    margin:25px auto;
-    border-radius:10px;
-    background:#fefee2;
-    background:rgba(254,254,226,0.88);
-    border:#1c7a05 2px solid;
-}
-.closex{
-    background:#606060;
-    color:#FFFFFF;
-    line-height:25px;
-    position:absolute;
-    right:-12px;
-    text-align:center;
-    top:-10px;
-    width:24px;
-    text-decoration:none;
-    font-weight:bold;
-    border-radius:12px;
-    box-shadow:1px 1px 3px #000;
-}
-.closex:hover{background:#ffe100}
-.userlinkmenu{
-    position:absolute;
-    top:17px;
-    right:0;
-    z-index:15;
-    min-height:80px;
-    width: 150px;
-}
 /* /Default */
 #up{
     width:85px;
@@ -112,9 +64,12 @@ img{
     bottom:17px;
     right:17px;
     cursor:pointer;
-    display:none;
     color:#333;
-    font-size:90%}
+    font-size:90%;
+    opacity:0;
+    transition:opacity .8s ease-in-out;
+
+}
 
 .link{
     cursor:pointer;
@@ -122,32 +77,8 @@ img{
 .scrh{overflow:hidden}
 .scrx{overflow-x:scroll}
 .scry{overflow-y:scroll}
-/*Video*/
-.video-responsive{
-    position:relative;
-    padding-bottom:56.25%;
-    height:0;
-    overflow:hidden}
-.video-responsive iframe,.video-responsive object,.video-responsive embed{
-    position:absolute;
-    top:0;
-    left:0;
-    width:100%;
-    height:100%;
-    border:0}
-/* /Video */
-/*Admin*/
-.karuselimg{
-    overflow:hidden;
-    overflow-x:scroll;
-    white-space:nowrap;
-}
-.karuselimg img{
-    display:inline-block;
-    vertical-align:top;
-    width:140px;
-    height:inherit;
-}
+
+
 .i16{height:16px;width:16px}
 .i20{height:20px;width:20px}
 .i25{height:25px;width:25px}
