--- a/css/smoke/dws_pic.css
+++ b/css/smoke/dws_pic.css
@@ -1,27 +1,21 @@
-
-.dws-wrapper{
- text-align: center;
- /*width: 26%;*/
- margin: 20px auto;
- position: relative;
- border: solid 2px rgba(255, 255, 255, 0.8);
- background: linear-gradient(20deg,#7a7a7a,#4D5055);
- overflow: hidden;/**/
-
-}
+.dws-wrapper{text-align:center;
+ margin:20px auto;
+ position:relative;
+ border:solid 2px rgba(255, 255, 255, 0.8);
+ background:linear-gradient(20deg,#7a7a7a,#4D5055);
+ overflow:hidden}
 
 .dws-wrapper a{
- display: block;
- color: #fff;
- text-decoration: none;
+ display:block;
+ color:#fff;
+ text-decoration:none
 }
 
-.dws-wrapper a img {
-  height: 400px;
- width: 100%;/**/
+.dws-wrapper a img{
+ height: 400px;
+ width: 100%
 }
 
-/**********/
 .dws-text{
  text-align: center;
  position: absolute;
@@ -37,10 +31,9 @@
 .dws-text p{font-size: 14px;color: #fff;}
 .dws-wrapper:hover .dws-text{opacity:1;}
 
-.dws-wrapper a:before,
-.dws-wrapper a:after{
- content: '';
- position: absolute;
+.dws-wrapper a:before,.dws-wrapper a:after{
+ content:'';
+ position:absolute;
  width:2000px;
  height:850px;
  transition:.7s ease-in-out;
@@ -49,33 +42,16 @@
 
 
 .dws-wrapper a:before{
- right: 0;
- bottom: -70%;
- background: rgba(230,12,50,0.8);
- transform: skewX(-45deg) translateX(108%);
+ right:0;
+ bottom:-70%;
+ background:rgba(230,12,50,0.8);
+ transform:skewX(-45deg) translateX(108%);
 }
 .dws-wrapper a:after{
- left: 0;
- top: -70%;
- background: rgba(11, 72, 174, 0.8);
- transform: skew(135deg) translateX(-108%);
+ left:0;
+ top:-70%;
+ background:rgba(11, 72, 174, 0.8);
+ transform:skew(135deg) translateX(-108%);
 }
 
-/**/
-.dws-wrapper:hover a:before{
- transform: skewX(-45deg) translateX(10%);
-}
-
-.dws-wrapper:hover a:after{
- transform: skew(135deg) translateX(-10%);
-}
-
-
-
-
-
-
-
-
-
-
+.dws-wrapper:hover a:before{transform:skewX(-45deg) translateX(10%)}.dws-wrapper:hover a:after{transform:skew(135deg) translateX(-10%)}
